add_subdirectory(Connector)
add_subdirectory(Database)
add_subdirectory(GRPC)
add_subdirectory(KVstore)
add_subdirectory(Main)
add_subdirectory(Parser)
add_subdirectory(Query)
add_subdirectory(Server)
add_subdirectory(Signature)
add_subdirectory(StringIndex)
add_subdirectory(Trie)
add_subdirectory(Util)